tests/data/mini_script/invalid/recovery_missing_semicolon.ms
let x = 1
print x;

let y = x + 2
print y;
